--- a/InformationSystem/InformationSystem/InformationSystem.csproj
+++ b/InformationSystem/InformationSystem/InformationSystem.csproj
@@ -11,4 +11,19 @@
       <PackageReference Include="CsvHelper" Version="30.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="products.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="staff.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="transactions.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="users.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
